# ChangeLog for x11-misc/alacarte
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.71 2009/03/06 15:48:50 ranger Exp $

  06 Mar 2009; Brent Baude <ranger@gentoo.org> alacarte-0.11.8.ebuild:
  Marking alacarte-0.11.8 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> alacarte-0.11.8.ebuild:
  Marking alacarte-0.11.8 ppc64 stable for bug 260063

  07 Feb 2009; Jeroen Roovers <jer@gentoo.org> alacarte-0.11.6.ebuild:
  Stable for HPPA (bug #255820).

*alacarte-0.11.8 (02 Feb 2009)

  02 Feb 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +alacarte-0.11.8.ebuild:
  Bump to 0.11.8. Translation updates.

  01 Feb 2009; nixnut <nixnut@gentoo.org> alacarte-0.11.6.ebuild:
  ppc stable #255820

  27 Jan 2009; Raúl Porcel <armin76@gentoo.org> alacarte-0.11.6.ebuild:
  alpha/ia64/x86 stable wrt #255820

  25 Jan 2009; Brent Baude <ranger@gentoo.org> alacarte-0.11.6.ebuild:
  stable ppc64, bug 255820

  24 Jan 2009; Kenneth Prugh <ken69267@gentoo.org> alacarte-0.11.6.ebuild:
  amd64 stable, bug #255820

  22 Jan 2009; Ferris McCormick <fmccor@gentoo.org> alacarte-0.11.6.ebuild:
  Sparc stable, Bug #255820.

*alacarte-0.11.7 (21 Jan 2009)

  21 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +alacarte-0.11.7.ebuild:
  Bump to 0.11.7. Port to GIO, updated translations.

  03 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/alacarte-0.11.3-python-2.5.patch, -alacarte-0.11.4.ebuild,
  alacarte-0.11.5.ebuild, alacarte-0.11.6.ebuild:
  Add gnome-panel to RDEPEND, bug #253164.

  13 Nov 2008; Brent Baude <ranger@gentoo.org> alacarte-0.11.5.ebuild:
  Marking alacarte-0.11.5 ppc64 stable for bug 236971

*alacarte-0.11.6 (27 Sep 2008)

  27 Sep 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -alacarte-0.11.3-r1.ebuild, +alacarte-0.11.6.ebuild:
  bump to 0.11.6. Updated translations. Use of more theme icons.
