@@ -1,11 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX alacarte-0.11.5-python-2.6.patch 448 RMD160 db11ef6e261fa0b72af5eeb02a810834288898fb SHA1 e7c0dfed53e4ef4ce06342dea5c8b675b516a703 SHA256 ea7a0b5962de081766809268ce226bd6b606e15d76110b32157af6f3a0c1affa
 DIST alacarte-0.11.5.tar.bz2 204512 RMD160 de4c66b0c0fb5e4b49be6de7ea83f73b159a6ad4 SHA1 33ed1de8d2297226f5b055eb223789574b005dcf SHA256 1aa7fd9cb1947987c3d047a53fe7bdeeafb31d046a6fcda02cfc5ef95ed6f7fa
 DIST alacarte-0.11.6.tar.bz2 177406 RMD160 1a887c7e6f3ac2a61d32afc6adfa4be38c52a889 SHA1 8e570b952cba1b13cce0f8dc005036a48e8e96f8 SHA256 7ca56a9f9fc1e57354d4170349d23e4db57d351b17b91f5629e0709284b49aa3
 DIST alacarte-0.11.7.tar.bz2 178584 RMD160 7e5b6326ba6f29118b047abb5ce30d2675c2ae47 SHA1 5af15cd81631702b946210873f828ebeb0248787 SHA256 5de9f3e7cbd15ca87d91aaaee638d7e07de4351e7e2f9d563f5d0b896e6faca6
 DIST alacarte-0.11.8.tar.bz2 178932 RMD160 9ade7947411d9e7067ecc2bc57ed92bf49df8327 SHA1 9b9ac9cf540bf9fe1df2f64e3416c424783430c4 SHA256 142432a81ba24c710ee2a2f38b4fd691e941eaa49c51e760adccccc02aa8a332
+DIST alacarte-0.11.9.tar.bz2 179155 RMD160 baae86b3a354915f6352df95fbc1eea26841455f SHA1 fcb00f5a341a8cebe6ad2584566ca38b488f4010 SHA256 01ff813180270204c380376dff5ba3eb341940d632857c7d55b47b977ca9d8a7
 EBUILD alacarte-0.11.5.ebuild 1417 RMD160 c824a8915698bd96736bed4f87a3f2a3e8cad05a SHA1 d51889f627d1aba95333a3c54fc8572ed927727c SHA256 020052c088421d7eb588a839c71e429d850b08def4d84d265a07e495e330bec9
 EBUILD alacarte-0.11.6.ebuild 1353 RMD160 4f581523825660b989ce1f4343173541a8bcaa4a SHA1 f6fb2b308e41be2d50b509e31f7a99e35432631f SHA256 1d9daca75065ecf732758f33566895ea1aeb79f62dd7f136c976b6a392bcead1
 EBUILD alacarte-0.11.7.ebuild 1397 RMD160 249db5981f62e8df4f58cf0fddae83f7b0002df3 SHA1 132562487adfa285c53a5984c0c166eb0eefa041 SHA256 e44c3477b35d155bc7ab2d6bd9ecabc27c790422d29828a48c1fe73fca175cad
 EBUILD alacarte-0.11.8.ebuild 1421 RMD160 522ddbac7b7280fb6d120512c19103d218aa1f44 SHA1 b9483e475ab2235702e53090c47856c574619372 SHA256 cad2eb0e8bc0ac268d463d4a0a902d6c6f95b4f7b9540bfce24c2a26c588c826
-MISC ChangeLog 8795 RMD160 259af432313f055fa13b901f1a70eebfbbdb03c6 SHA1 e2fd6d41cdfd27b2ae9cf4f67d13e218be4f30fe SHA256 60f987cd73f9da36e9473f60089868efe41ebdc4b8438e597a065769b47d0bcb
+EBUILD alacarte-0.11.9.ebuild 1212 RMD160 0df7cb0bdefb13fc7b0a2496bcf1905f5be53091 SHA1 9acc80d0a31df9850b7ca1d44d9dde34e9049dd2 SHA256 514d2661d49784a084f7688754e2c261d859452647730312315e8006c21d35ef
+MISC ChangeLog 8972 RMD160 354b00f5bc4f168ae1c75b8bc55e1508edfed5e2 SHA1 84c36afa1221cba066abd3395f986cc6ec519a44 SHA256 c18ddb94a0e045ee9ebe5962e37fa3f919177554d7af91ba3c11c091404cbfa4
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.10 (GNU/Linux)
+
+iEYEARECAAYFAkmzFJEACgkQ1fmVwcYIWAY7YgCg7CIwLXoik/Rsv6h8Rq89HQUd
+PgcAnReTkVKXBzF28RlHkoNBOV12uWTT
+=mJxI
+-----END PGP SIGNATURE-----
