@@ -5,13 +5,13 @@ AUX shared-mime-info-0.60-parallel-make.patch 418 RMD160 e329a8abff7e730a5aba458
 DIST shared-mime-info-0.51.tar.bz2 445565 RMD160 9e0281f3bd9ac44af60833ec6b15af9f58936cc7 SHA1 4428b572e6d0fd1d8cf5d2f3eb887d7ab90e151f SHA256 1c247e03418d6b90bcbc0da6c1abe6ac9cd5bacf9c3a2f3b6105376cf7b0eed8
 DIST shared-mime-info-0.60.tar.bz2 457377 RMD160 b7f781b248c2dd65e51575502fe427f964866e65 SHA1 5c071da5a6fca3116ac39a1b06c10d52d85e37ec SHA256 a0d0a948fbb8d0de576876791d53efd1c5e8dd782eb9e5369cafc06c3969de22
 EBUILD shared-mime-info-0.51.ebuild 1317 RMD160 c1c9b754330a579637aaecd432d6122d02d332a3 SHA1 6a9a1a14998d53bcb47684b5195dcae35e213a82 SHA256 96ebbb23cc24c38d811549d4f7ecbcbaa45810fb891bcd669bbfacd8e02454a4
-EBUILD shared-mime-info-0.60.ebuild 1489 RMD160 b207f2a7ebbda600ae489f9854bf760b60783cc8 SHA1 b4e71eef8aa9443846d9d62625e9730c984d3afe SHA256 065ea9e593d92413f1ccdcf2a2f96ac6a418f5de11321bbec877d7fd7ca5d5f4
-MISC ChangeLog 18264 RMD160 da6221045615653b5157076a9fe77ff626b01a7d SHA1 7c5151c33c704aa1c8f27c0f69f8cf061f0ba5c9 SHA256 3eb6caae2632ddce6931e0a752062b37c09baf862b98bc3dddd407d055bd7b69
+EBUILD shared-mime-info-0.60.ebuild 1489 RMD160 bf8cff48d045dbc1cdf224d3457c884c054eafe8 SHA1 62894500be0b8cedb86a8b9c940f875da6cccd99 SHA256 8f011a3fd5e782e57465b3c4e19a31c28f2cc076bc966868089e471e5a83c28c
+MISC ChangeLog 18418 RMD160 e4be60cbd40b92524ca717c776a531e652e5ab9b SHA1 2b7feee0d1cfa6da9c4fa6cb66468e6998ae466e SHA256 6d0c6cc0c4afff65a6431d18cfc9b7ba58c9dbc32abb1d037dbb8338e476d9e2
 MISC metadata.xml 234 RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 SHA1 4641c1e70e35e944e7019aeae967deb1d2c28186 SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.10 (GNU/Linux)
 
-iEYEARECAAYFAkmygMkACgkQ1fmVwcYIWAbQGwCg66fC6+SDeOWddAMqZrDiZad3
-5t0AoOHK/cP6q1EM1huyRpClNHIkZkyC
-=0jwf
+iEYEARECAAYFAkmzFOwACgkQ1fmVwcYIWAZmxQCfVedtU/AfZHePRi6hkRsuf4MR
+7LAAoJTBeEivdba32kBdMElTZGhBkT8J
+=BslU
 -----END PGP SIGNATURE-----
