@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/alacarte
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.71 2009/03/06 15:48:50 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/alacarte/ChangeLog,v 1.72 2009/03/08 00:42:42 eva Exp $
+
+*alacarte-0.11.9 (08 Mar 2009)
+
+  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  +alacarte-0.11.9.ebuild:
+  Bump to 0.11.9. Remove gnomeui dependency, translation updates.
 
   06 Mar 2009; Brent Baude <ranger@gentoo.org> alacarte-0.11.8.ebuild:
   Marking alacarte-0.11.8 ppc stable for bug 260063
